--- a/src/Osu.Music.UI/Resources/Dictionaries/Texts.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Texts.xaml
@@ -40,11 +40,25 @@
     </Style>
 
     <Style x:Key="MenuDefault" TargetType="{x:Type TextBlock}">
-        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontSize" Value="12"/>
         <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
     </Style>
 
     <Style x:Key="LinkText" TargetType="{x:Type TextBlock}">
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
+        <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
+        <Setter Property="Foreground" Value="#0366d6"/>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="TextDecorations" Value="Underline"/>
+                <Setter Property="Cursor" Value="Hand"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="LinkRun" TargetType="{x:Type Run}">
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="FontWeight" Value="SemiBold"/>
         <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
