--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -85,7 +85,7 @@
                     <RadioButton Style="{DynamicResource SidebarButtonPlaylists}" Command="{Binding OpenPageCommand}" CommandParameter="PlaylistsView"/>
                     <RadioButton Style="{DynamicResource SidebarButtonCollection}" Command="{Binding OpenPageCommand}" CommandParameter="CollectionsView"/>
                     <Separator Background="{DynamicResource SolidColorBrushMainBorder}"/>
-                    <Button Style="{DynamicResource SidebarButtonNewPlaylist}"/>
+                    <Button Style="{DynamicResource SidebarButtonNewPlaylist}" Command="{Binding CreatePlaylistCommand}"/>
                 </StackPanel>
 
                 <ContentPresenter x:Name="contentPresenter" Grid.Row="1" Content="{Binding Visualization.Content}"/>
