--- a/src/Osu.Music.UI/Views/LibraryView.xaml
+++ b/src/Osu.Music.UI/Views/LibraryView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Osu.Music.UI.Views.SongsView"
+﻿<UserControl x:Class="Osu.Music.UI.Views.LibraryView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -20,11 +20,11 @@
                     <Grid>
                         <Grid.InputBindings>
                             <MouseBinding Gesture="LeftDoubleClick" 
-                                          Command="{Binding DataContext.PlayBeatmapCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SongsView}}}">
+                                          Command="{Binding DataContext.PlayBeatmapCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:LibraryView}}}">
                                 <MouseBinding.CommandParameter>
                                     <MultiBinding Converter="{StaticResource MultipleParametersConverter}">
                                         <Binding Path="SelectedItem" RelativeSource="{RelativeSource AncestorType=ListView}"/>
-                                        <Binding Path="DataContext.Model.Beatmaps" RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type local:SongsView}}"/>
+                                        <Binding Path="DataContext.Model.Beatmaps" RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type local:LibraryView}}"/>
                                     </MultiBinding>
                                 </MouseBinding.CommandParameter>
                             </MouseBinding>
